@@ -62,6 +62,9 @@ typedef struct PyMemberDef {
 /* Added by Jack: strings contained in the structure */
 #define T_STRING_INPLACE	13
 
+/* Added by Lillo: bools contained in the structure (assumed char) */
+#define T_BOOL		14
+
 #define T_OBJECT_EX	16	/* Like T_OBJECT, but raises AttributeError
 				   when the value is NULL, instead of
 				   converting to None. */
